umol-models-graph/tests/sdf_parsing/snapshots/sdf_parsing__sdf_parsing_suite__run_conformance_test@bcl_hexane_no_misc_props.sdf.snap
---
source: umol-models-graph/tests/sdf_parsing/mod.rs
expression: results
---
expected_category: molecule
category: molecule
molecule:
  success: true
  compound_count: 0
  summaries: []
molecule_lenient:
  success: true
  compound_count: 0
  summaries: []
extended_molecule:
  success: true
  compound_count: 0
  extended_summaries: []
extended_molecule_lenient:
  success: true
  compound_count: 0
  extended_summaries: []
