umol-models-graph/tests/sdf_parsing/snapshots/sdf_parsing__sdf_parsing_suite__run_conformance_test@bcl_nmrshiftdb_first2.sdf.snap
---
source: umol-models-graph/tests/sdf_parsing/mod.rs
expression: results
---
expected_category: extended_molecule
category: extended_molecule
molecule:
  success: false
  compound_count: 0
  error:
    error_type: InvalidBondLine
    message: "Invalid bond line at line 145, col 0"
molecule_lenient:
  success: false
  compound_count: 0
  error:
    error_type: InvalidBondLine
    message: "Invalid bond line at line 145, col 0"
extended_molecule:
  success: true
  compound_count: 3
  extended_summaries:
    - sum_formula: C23H26O12
      atom_count: 61
      bond_count: 63
      extended_atoms: 0
      extended_bonds: 0
      property_count: 9
      rgroup_count: 0
      sgroup_count: 0
    - sum_formula: C8N2O
      atom_count: 11
      bond_count: 11
      extended_atoms: 0
      extended_bonds: 0
      property_count: 4
      rgroup_count: 0
      sgroup_count: 0
    - sum_formula: C17HO3
      atom_count: 21
      bond_count: 21
      extended_atoms: 0
      extended_bonds: 0
      property_count: 4
      rgroup_count: 0
      sgroup_count: 0
extended_molecule_lenient:
  success: true
  compound_count: 3
  extended_summaries:
    - sum_formula: C23H26O12
      atom_count: 61
      bond_count: 63
      extended_atoms: 0
      extended_bonds: 0
      property_count: 9
      rgroup_count: 0
      sgroup_count: 0
    - sum_formula: C8N2O
      atom_count: 11
      bond_count: 11
      extended_atoms: 0
      extended_bonds: 0
      property_count: 4
      rgroup_count: 0
      sgroup_count: 0
    - sum_formula: C17HO3
      atom_count: 21
      bond_count: 21
      extended_atoms: 0
      extended_bonds: 0
      property_count: 4
      rgroup_count: 0
      sgroup_count: 0
