umol-models-graph/tests/sdf_parsing/snapshots/sdf_parsing__sdf_parsing_suite__run_conformance_test@bcl_reactants.sdf.snap
---
source: umol-models-graph/tests/sdf_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
molecule:
  success: false
  compound_count: 0
  error:
    error_type: InvalidBondLine
    message: "Invalid bond line at line 59, col 22"
molecule_lenient:
  success: false
  compound_count: 0
  error:
    error_type: InvalidBondLine
    message: "Invalid bond line at line 59, col 22"
extended_molecule:
  success: false
  compound_count: 0
  error:
    error_type: InvalidBondLine
    message: "Invalid bond line at line 59, col 0"
extended_molecule_lenient:
  success: false
  compound_count: 0
  error:
    error_type: InvalidBondLine
    message: "Invalid bond line at line 59, col 0"
